<resources>
    <string name="app_name">PicPay Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contatos</string>
    <string name="register_card">Cadastrar cartão</string>
    <string name="credit_card">Cartão de crédito</string>
    <string name="search_placeholder">A quem você deseja pagar?</string>
    <string name="title_register_credit_card">Cadastre um cartão de crédito</string>
    <string name="description_register_credit_card">Para fazer pagamentos para outras pessoas você precisa cadastrar um cartão de crédito pessoal.</string>
    <string name="text_field_card_name">Número do cartão</string>
    <string name="text_field_cardholder_name">Nome do titular</string>
    <string name="text_field_due_date">Vencimento</string>
    <string name="text_field_cvv">CVV</string>
    <string name="text_button_save">Salvar</string>
    <string name="error_credit_card">Problema ao carregar os dados do cartão de crédito.</string>
    <string name="saved_high_score_key">0</string>
    <string name="card_number_user_key">card_number_user_key</string>
    <string name="start_value_payment">R$ 0,00</string>
    <string name="send_payment">Pagar</string>
    <string name="edit_credit_card">EDITAR</string>
    <string name="info_credit_card">"Mastercard • %1$s"</string>
    <string name="datetime_receipt_payment">%1$s às %2$s</string>
    <string name="number_transaction_receipt_payment">Transação: %1$s</string>
    <string name="receipt_payment">Recibo</string>
    <string name="text_total_paid">Total pago</string>
</resources>