<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.creditcard.view.RegisterCardPresentationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageViewCreditCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_image_credit_card"
            android:src="@drawable/ic_credit_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewCreditCardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimensOf20dp"
            android:layout_marginTop="@dimen/dimensOf32dp"
            android:layout_marginEnd="@dimen/dimensOf20dp"
            android:gravity="center"
            android:text="@string/title_register_credit_card"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appCompatImageViewCreditCard" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewCreditCardDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_text_description_credit_card"
            android:layout_marginTop="@dimen/dimensOf16dp"
            android:layout_marginEnd="@dimen/margin_text_description_credit_card"
            android:gravity="center"
            android:text="@string/description_register_credit_card"
            android:textColor="@color/colorPlaceHolder"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appCompatTextViewCreditCardTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonRegisterCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:theme="@style/MatButton"
            app:cornerRadius="@dimen/corner_radius_button"
            android:layout_marginStart="@dimen/dimensOf12dp"
            android:layout_marginEnd="@dimen/dimensOf12dp"
            android:layout_marginBottom="@dimen/dimensOf12dp"
            android:text="@string/register_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>